force-app/main/default/objects/FootCountInquiry__c/FootCountInquiry__c.object-meta.xml
<CustomObject>
    <label>Foot Count Inquiry</label>
    <nameField>
        <displayFormat>FCI-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Foot Count Inquiry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foot Count Inquiry</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>