force-app/main/default/objects/FootCountInquiry__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Foot Count Inquiry</relationshipLabel>
    <relationshipName>FootCountInquiry</relationshipName>
    <type>Lookup</type>
</CustomField>