force-app/main/default/objects/FootCountInquiry__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Foot Count Inquiry</relationshipLabel>
    <relationshipName>Foot_Count_Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>