force-app/main/default/objects/FootCountInquiry__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Foot Count Inquiry</relationshipLabel>
    <relationshipName>Foot_Count_Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>