force-app/main/default/objects/FootCountInquiry__c/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <inlineHelpText>How many customers walk through your store’s doors today?</inlineHelpText>
    <label>Question1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;10</fullName>
                <label>&lt; 10</label>
            </value>
            <value>
                <fullName>10 ~ 50</fullName>
            </value>
            <value>
                <fullName>&gt;50</fullName>
                <label>&gt; 50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>