force-app/main/default/objects/FootCountInquiry__c/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <inlineHelpText>How many customers have you interacted with, more or less?</inlineHelpText>
    <label>Question2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>