force-app/main/default/objects/FootCountInquiry__c/fields/Question3__c.field-meta.xml
<CustomField>
    <fullName>Question3__c</fullName>
    <inlineHelpText>How many of the customers that you have interacted with bought your products?</inlineHelpText>
    <label>Question3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>