force-app/main/default/objects/FootCountInquiry__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Foot Count Inquiry</relationshipLabel>
    <relationshipName>Foot_Count_Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>