force-app/main/default/objects/FootCountInquiry__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Foot Count Inquiry</relationshipLabel>
    <relationshipName>Foot_Count_Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>